--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: orangered;
+  background-color: green;
 }
 .storybook-button--secondary {
   color: #333;
